crates/dat0-ui/tests/snapshots/visual_snapshot__sidebar__section-collapsed.snap
---
source: crates/dat0-ui/tests/visual_snapshot.rs
expression: "rendered[0].1"
---
<div class="d0-scene" data-scene="sidebar/section-collapsed" style="width: 1440px; height: 900px; overflow: hidden">
<div class="d0-sidebar" data-a11y-id="sidebar" role="navigation" aria-label="Catalog">
<div class="d0-sidebar-head">
<span class="d0-label">catalog</span>
<span class="d0-mono is-local">local</span>
</div>
<div class="d0-sidebar-body" data-a11y-id="catalog-tree" role="tree" tabindex="0" aria-activedescendant="catalog-row-files-0">
<div data-a11y-id="section-files" role="group" aria-label="FILES">
<button class="d0-section-label d0-label" data-a11y-id="section-toggle-files" aria-expanded="true">
<span class="d0-chevron">▾</span>FILES</button>
<button class="d0-row is-cursor" id="catalog-row-files-0" data-a11y-id="row-files-0" role="treeitem" tabindex="-1" aria-selected="true">
<span class="d0-row-name">
<span class="d0-swatch sw-other">
</span>sales</span>
<span class="d0-row-meta">
</span>
</button>
<button class="d0-row" id="catalog-row-files-1" data-a11y-id="row-files-1" role="treeitem" tabindex="-1" aria-selected="false">
<span class="d0-row-name">
<span class="d0-swatch sw-other">
</span>trips</span>
<span class="d0-row-meta">
</span>
</button>
</div>
<div data-a11y-id="section-connections" role="group" aria-label="CONNECTIONS">
<button class="d0-section-label d0-label" data-a11y-id="section-toggle-connections" aria-expanded="false">
<span class="d0-chevron is-collapsed">▾</span>CONNECTIONS</button>
</div>
<div data-a11y-id="section-packages" role="group" aria-label="PACKAGES">
<button class="d0-section-label d0-label" data-a11y-id="section-toggle-packages" aria-expanded="true">
<span class="d0-chevron">▾</span>PACKAGES</button>
<button class="d0-row" id="catalog-row-packages-0" data-a11y-id="row-packages-0" role="treeitem" tabindex="-1" aria-selected="false">
<span class="d0-row-name">
<span class="d0-swatch sw-dat0">
</span>q3-review.dat0</span>
<span class="d0-row-meta">
</span>
</button>
</div>
</div>
<div class="d0-sidebar-foot">
<span>session · 1 window · 3 tabs</span>
<span>ai none</span>
<span class="is-ok" data-a11y-id="sidebar-egress">egress 0 B</span>
</div>
</div>
</div>
